DKW-162: Fixed accept offer form alignment issues.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -73,11 +73,6 @@ html{
 .serviceTitle{
   color: #fff;
 }
-@media all and (max-width: 768px){
-  .navbar-default .navbar-collapse{
-    background: rgba(0, 0, 0, .50);
-  }
-}
 nav.navbar-custom{
   .navbar-toggle{
     color: #fff;
